Thinks seem to be working fine on mobile(chrome testing). FireFox desktop seems to be working fine also. I removed the boostrap CDNs. Also did some Ui finetuning. I think I've finally found a great text-based greeting message. Something like 'Groud Frank Interactive Resume.'Also want to get started on fallback fonts. But before all of that I'd like to check everythig on IE and make sure it's working.

--- a/css/groud-frank-depreciated.css
+++ b/css/groud-frank-depreciated.css
@@ -196,7 +196,7 @@ h4{
   align-items: center;
   width: 200px;
   height: 200px;
-  border-radius: 50%;
+  border-radius: 10px;
   margin: 20px;
   box-shadow: 0 9px 25px -5px #808080;
 } 
