--- a/css/lets-normalize.css
+++ b/css/lets-normalize.css
@@ -68,7 +68,7 @@ h4{
   color: #fff;
   text-align: center;
   min-height: 84px;
-  font-weight: light;
+  /* font-weight: 100; */
 }
 
 .inconsolata{
@@ -214,7 +214,7 @@ h4{
   align-items: center;
   width: 200px;
   height: 200px;
-  border-radius: 50%;
+  border-radius: 5%;
   margin: 20px;
   box-shadow: 0 9px 25px -5px #808080;
 } 
@@ -437,7 +437,7 @@ transform: scale(1.05);
   top: 0px;
   width: 100%;
   min-height: 80px;
-  /* font-size: 24px; */
+  color: #333333;
   font-weight: bold;
   text-align: center;
   white-space: pre-line;
@@ -834,6 +834,7 @@ transform: scale(1.05);
   border-radius: 5px;
   outline: none;
   padding: 6px;
+  margin-top: 10px;
   background: #1fc8db;
   /* box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22); */
   box-shadow: -3px 5px 25px 0px rgba(46,61,73,0.2);
@@ -1225,6 +1226,7 @@ transform: scale(1.05);
   overflow: hidden;
   width: 100%;
   height: 100%;
+  margin: 0px;
   transition: opacity 0.5s ease-in-out;
 }
 
@@ -1545,7 +1547,7 @@ label{
 }
 
 input[type=text]{
-  width: 35%;
+  width: 45%;
   height: 40px;
   box-sizing: border-box;
   border: none;
@@ -1554,7 +1556,7 @@ input[type=text]{
   border-radius: 30px;
   outline: none;
   background: #eee;
-  font-size: 1.45em;
+  font-size: 1.01em;
   font-weight: bold;
   color: #B99BEC;
   text-align: center;
@@ -1571,7 +1573,7 @@ input[type=text]:focus{
 }
 
 textarea{
-  font-size: 1.45em;
+  font-size: 1.01em;
   font-weight: bold;
   color: #B99BEC;
   width: 60%;
@@ -2527,6 +2529,7 @@ background: #3f3e44 !important;
     height: calc(29px * 1.2);
     border-radius: calc(5px * 1.2);
     padding: calc(6px * 1.2);
+    margin-top: calc(10px * 1.2);
     box-shadow: 0 calc(9px * 1.2) calc(25px * 1.2) calc(-5px * 1.2) #1fc8db;
   }
 }
@@ -2544,6 +2547,7 @@ background: #3f3e44 !important;
     height: calc(29px * 2.4);
     border-radius: calc(5px * 2.4);
     padding: calc(6px * 2.4);
+    margin-top: calc(10px * 1.2);
     box-shadow: 0 calc(9px * 2.4) calc(25px * 2.4) calc(-5px * 2.4) #1fc8db;
   }
 }
@@ -2808,9 +2812,17 @@ background: #3f3e44 !important;
 @media (max-width: 768px) {
   #me-imgs .me-img-container{
       height: 40px;
-      width: 80%;
+      /* width: 80%; */
+      width: 300px;
   }
 } 
+
+/* @media (max-width: 768px) {
+  #me-imgs .me-img-container:hover{
+      height: 40px;
+      width: 225px;
+  }
+}  */
 
 @media only screen  and (min-width : 2000px) {
   #me-imgs .me-img-container{
